fix: select onBlur on mobile devices

--- a/src/components/ui/Inputs/InputTypeSelect/InputTypeSelect.module.css
+++ b/src/components/ui/Inputs/InputTypeSelect/InputTypeSelect.module.css
@@ -14,6 +14,7 @@
 }
 
 :global(html .react-select__option) {
+  font-family: 'Montserrat', Tahoma, sans-serif;
   font-size: 12px;
   font-weight: 300;
 }
